--- a/styles/article.css
+++ b/styles/article.css
@@ -53,6 +53,7 @@ header p a {
 }
 
 section:not(.banner) {
+    position: relative;
     max-width: 600px;
     margin: 2em auto;
     padding: 3em 2em;
@@ -77,6 +78,12 @@ section.banner {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+
+img.example {
+    display: block;
+    width: 100%;
+    margin: 1.2em 0;
 }
 
 .source {
