--- a/styles/home.css
+++ b/styles/home.css
@@ -36,6 +36,7 @@ section a:nth-child(3) {
 
 section a:nth-child(4) {
     grid-area: 2 / 2 / 4 / 3;
+    background-image: url(../img/tips/head.jpg);
 }
 
 section a:nth-child(5) {
