--- a/styles/home.css
+++ b/styles/home.css
@@ -41,6 +41,7 @@ section a:nth-child(4) {
 
 section a:nth-child(5) {
     grid-area: 3 / 3 / 4 / 4;
+    background-image: url(../img/notes.jpg);
 }
 
 
